--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html {
   left: 0;
   width: calc(100% - 10px);
   padding: 5px;
-  height: 100%;
+  height: calc(100% - 95px);
   z-index: 1;
   text-align: center;
 }
